tests/error/tracing_errors/linear_not_owned2.err
Error: Error in comptime function return (at $FILE:11:0)
   | 
 9 | 
10 | @guppy.comptime(module)
11 | def test(qs: array[qubit, 10]) -> None:
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |     measure(qs[0])
   | ^^^^^^^^^^^^^^^^^^

Argument `qs` is borrowed, so it is implicitly returned to the caller. Value
with non-copyable type `qubit` was already used

Previous use occurred in linear_not_owned2.py:12 as an argument to `measure`.

Guppy compilation failed due to 1 previous error
